# auto-icon-vectorizer

./: .gitignore  README.md  llms.txt  pyproject.toml  setup.cfg
auto_icon_vectorizer/: __init__.py  doctor.py  install_runtime.py  regression.py  vectorize.py
auto_icon_vectorizer/runtime/: README.md  apply_svm_connections.py  generate_spectral_evidence_bank.py  package-lock.json  package.json  trace_icon_component.py  train_aux_fusion_icon_segmenter.py  train_filled_silhouette_segmenter.py
auto_icon_vectorizer/runtime/nn-seg-results/: best-filled-silhouette-unet.pt  best-gated-unet.pt  filled-silhouette-training-history.json
docs/: ALGORITHM.md  CAPABILITIES.md  RESEARCH.md  RUNTIME_ASSETS.md
examples/: README.md  icon-vectorizer-regression.json
scripts/: generate_public_training_corpus.py  generate_readme_diagrams.py
