[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-icon-vectorizer"
version = "0.1.0"
description = "Convert cropped raster UI icons into inline SVG HTML using auto stroke/filled segmentation and Potrace."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Jayden Barnes" }
]
keywords = ["svg", "icon", "vectorization", "potrace", "segmentation", "u-net", "computer-vision"]
dependencies = [
  "cairosvg>=2.7.0",
  "joblib>=1.3.0",
  "numpy>=1.24.0",
  "opencv-python>=4.8.0",
  "pillow>=10.0.0",
  "scikit-image>=0.21.0",
  "torch>=2.1.0"
]

[project.urls]
Homepage = "https://github.com/jaydenbarnescs-tech/auto-icon-vectorizer"
Repository = "https://github.com/jaydenbarnescs-tech/auto-icon-vectorizer"

[project.scripts]
auto-icon-vectorizer = "auto_icon_vectorizer.vectorize:main"
auto-icon-vectorizer-regression = "auto_icon_vectorizer.regression:main"
auto-icon-vectorizer-install-runtime = "auto_icon_vectorizer.install_runtime:main"

[tool.setuptools.packages.find]
include = ["auto_icon_vectorizer*"]

[tool.setuptools.package-data]
auto_icon_vectorizer = [
  "runtime/package.json",
  "runtime/package-lock.json",
  "runtime/nn-seg-results/*.pt",
  "runtime/nn-seg-results/*.json"
]
