[metadata]
name = auto-icon-vectorizer
version = 0.1.0
description = Recover blurry AI-generated UI icon crops as clean SVG and inline SVG HTML using U-Net background removal and Potrace.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Jayden Barnes
keywords = svg, icon, vectorization, image-to-svg, raster-to-vector, ui-icons, ai-generated-ui, screenshot-to-code, background-removal, blurry-icons, icon-cleanup, potrace, segmentation, u-net, computer-vision
url = https://github.com/jaydenbarnescs-tech/auto-icon-vectorizer
project_urls =
    Repository = https://github.com/jaydenbarnescs-tech/auto-icon-vectorizer

[options]
packages = find:
python_requires = >=3.9
install_requires =
    cairosvg>=2.7.0
    joblib>=1.3.0
    numpy>=1.24.0
    opencv-python>=4.8.0
    pillow>=10.0.0
    scikit-image>=0.21.0
    torch>=2.1.0
include_package_data = True

[options.packages.find]
include = auto_icon_vectorizer*

[options.package_data]
auto_icon_vectorizer =
    runtime/package.json
    runtime/package-lock.json
    runtime/nn-seg-results/*.pt
    runtime/nn-seg-results/*.json

[options.entry_points]
console_scripts =
    auto-icon-vectorizer = auto_icon_vectorizer.vectorize:main
    auto-icon-vectorizer-doctor = auto_icon_vectorizer.doctor:main
    auto-icon-vectorizer-regression = auto_icon_vectorizer.regression:main
    auto-icon-vectorizer-install-runtime = auto_icon_vectorizer.install_runtime:main
